--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,18 @@
-
 /* Tags targating */
 
 body {
-  font-family: 'Montserrat', sans-serif; 
-
+  font-family: 'Montserrat', sans-serif;
 }
 
 nav.navbar {
-    padding-bottom: 4.5rem;
+  padding-bottom: 4.5rem;
 }
 
 h1 {
-  font-family: 'Montserrat-Black'; 
+  font-family: 'Montserrat-Black';
   font-size: 3.5rem;
   line-height: 1.5;
 }
-
 
 h2 {
   text-align: center;
@@ -27,8 +24,8 @@ h2 {
 /* ID targating */
 
 #title {
-    background-color: #ff4c68;
-    color: #fff;
+  background-color: #ff4c68;
+  color: #fff;
 }
 
 #pricing {
@@ -39,14 +36,13 @@ h2 {
 /* class targating */
 
 .navbar-brand {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 2.5rem;
-    font-weight: bold;
-
-} 
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
 
 .container-fluid {
-    padding: 3% 15% 7%;
+  padding: 3% 15%;
 }
 
 .nav-item {
@@ -63,7 +59,6 @@ h2 {
   width: 60%;
   transform: rotate(25deg);
   position: absolute;
-  z-index: 1;
 }
 
 .button-download {
@@ -83,15 +78,8 @@ h2 {
   text-align: center;
   background-color: white;
   position: relative;
-  z-index: 1;
+  padding: 7% 15%;
 }
-
-.try {
-    margin: 0% 15% 7%;
-    padding-top: 4%;
-
-}
-
 
 .text-content {
   font-family: 'Montserrat-Bold';
@@ -113,13 +101,11 @@ h2 {
   padding: 7% 15%;
 }
 
-
 .testimonials-images {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
 }
-
 
 #press {
   background-color: #ef8172;
@@ -136,4 +122,17 @@ h2 {
   padding: 3% 2%;
 }
 
-
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  
+  #features {
+    position: static;
+  }
+  
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
